# Trustworthy_v2

./: .gitignore  evaluate_checkpoint.py  pyproject.toml  run_hubert_training.py  run_tts_rl_with_tis.py
config/: ht-config.json  hubert-config.json  mockingjay-config.json  tacotron-libritts.json  tacotron-ljspeech.json  tts-bert-gst-config.json
src/project/data/: tis_dataset.py
src/tspeech/: htmodel.py  tts.py
src/tspeech/data/: collate_fn.py  combined_dataset.py  cxd_dataset.py  ht_datamodule.py
src/tspeech/data/tts/: __init__.py  datamodule.py  dataset.py
src/tspeech/hubert/: train.py
src/tspeech/hubert/data/: __init__.py  ht_datamodule.py
src/tspeech/hubert/model/: __init__.py  htmodel.py
src/tspeech/mockingjay/: htmodel.py
src/tspeech/mockingjay/data/: ht_datamodule.py
src/tspeech/mockingjay/model/: htmodel.py  lora.py
src/tspeech/model/: htmodel.py  trust_classifier.py  tts.py
src/tspeech/model/tacotron2/: __init__.py  always_dropout.py  attention.py  bert_gst_encoder.py  decoder.py  encoder.py  gst.py  gst_with_weights.py  postnet.py  rl_gst_policy.py  tacotron2.py
src/tspeech/vocoder/: __init__.py  vocos_wrapper.py
