[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
authors = [
  { name="Author Name", email="email@example.com" },
]
description = "description"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonargparse[signatures]==4.44.0",
    "lightning==2.6.0",
    "matplotlib==3.10.8",
    "pytest==9.0.2",
    "tensorboard==2.20.0",
    "torch==2.9.1",
    "torchcodec==0.9.1",
    "transformers==4.57.3",
    "pandas==2.3.3",
    "torchaudio==2.9.1",
    "soundfile==0.13.1",
]

[tool.setuptools.package-data]
"tspeech" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/mattm458/ml-template"
"Bug Tracker" = "https://github.com/mattm458/ml-template/issues"

[project.scripts]
htmodel = "tspeech.htmodel:cli_main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"