[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
authors = [
  { name="Author Name", email="email@example.com" },
]
description = "description"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonargparse[signatures]==4.44.0",
    "librosa==0.11.0",
    "lightning==2.5.4",
    "matplotlib>=3.5.0,<3.10.0",
    "pytest>=7.0.0,<9.0.0",
    "tensorboard==2.20.0",
    "torch>=2.0.0,<2.9.0",
    "torchcodec>=0.7.0",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "torchaudio>=2.0.0,<2.9.0",
    "soundfile==0.13.1",
    "Unidecode==1.4.0",
    "s3prl>=0.4.0"
]

[tool.setuptools.package-data]
"tspeech" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/mattm458/ml-template"
"Bug Tracker" = "https://github.com/mattm458/ml-template/issues"

[project.scripts]
htmodel = "tspeech.htmodel:cli_main"
htmodel_mockingjay = "tspeech.mockingjay.htmodel:cli_main"
tts = "tspeech.tts:cli_main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"